altera css das telas

--- a/front/dsr-front/src/routes/History/components/HistoryList.module.css
+++ b/front/dsr-front/src/routes/History/components/HistoryList.module.css
@@ -14,3 +14,14 @@
 .filter input {
   margin-right: 10px;
 }
+
+.button_get {
+  margin-top: 20px;
+  width: 300px;
+  padding: 10px;
+  background-color: #3498db;
+  color: #fff;
+  border: none;
+  border-radius: 16px;
+  cursor: pointer;
+}
